--- a/src/main/resources/templates/views/usuarios/login.html
+++ b/src/main/resources/templates/views/usuarios/login.html
@@ -40,7 +40,7 @@
 						<a class="nav-link text-bg-F8EDE5" aria-current="page" href="./">Início</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-bg-F8EDE5" href="#projetos">Projetos</a>
+						<a class="nav-link text-bg-F8EDE5" href="/projetos">Projetos</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link text-bg-F8EDE5" href="/vagas">Vagas</a>
