--- a/src/main/resources/templates/views/usuarios/projetos.html
+++ b/src/main/resources/templates/views/usuarios/projetos.html
@@ -58,7 +58,7 @@
 						<a class="nav-link text-bg-F8EDE5" href="./empresas">Empresas</a>
 					</li>
 					<li class="nav-item">
-                        <a class="nav-link text-bg-F8EDE5"th:href="@{/login}">Login</a>
+                        <a class="nav-link text-bg-F8EDE5"th:href="@{/register}">Login</a>
                     </li>
 				</ul>
 			</div>
