--- a/src/main/resources/templates/views/usuarios/vagas.html
+++ b/src/main/resources/templates/views/usuarios/vagas.html
@@ -58,8 +58,8 @@
 						<a class="nav-link text-bg-F8EDE5" href="./empresas">Empresas</a>
 					</li>
 					<li class="nav-item">
-                        <a class="nav-link text-bg-F8EDE5"th:href="@{/login}">Login</a>
-                    </li>
+						<a class="nav-link text-bg-F8EDE5" href="././usuarios"><i class="bi bi-person-fill"></i></a>
+					</li>
 				</ul>
 			</div>
 		</div>
